test/runtime/fail/expr/index_no_identifier.hy

// expect error: Expected identifier after `.`, found `3`

let a = 3
let b = a.hello.3
